--- a/_modules/scripts/engine/internal/definition.html
+++ b/_modules/scripts/engine/internal/definition.html
@@ -674,7 +674,7 @@
 <span class="c1">################### EFFECTS ###################################################</span>
 
 
-<div class="viewcode-block" id="EffectData"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.definition.EffectData">[docs]</a><span class="nd">@dataclass</span>
+<div class="viewcode-block" id="EffectData"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.definition.EffectData">[docs]</a><span class="nd">@dataclass</span><span class="p">()</span>
 <span class="k">class</span> <span class="nc">EffectData</span><span class="p">(</span><span class="n">ABC</span><span class="p">):</span>
     <span class="sd">"""</span>
 <span class="sd">    Base data class for an effect.</span>
