--- a/genindex.html
+++ b/genindex.html
@@ -1530,6 +1530,8 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritesData.idle">(TraitSpritesData attribute)</a>
 </li>
       </ul></li>
+      <li><a href="nqp/general/command.html#scripts.nqp.command.init_subscribers">init_subscribers() (in module scripts.nqp.command)</a>, <a href="scripts.nqp.html#scripts.nqp.command.init_subscribers">[1]</a>
+</li>
       <li><a href="nqp/general/command.html#scripts.nqp.command.initialise_game">initialise_game() (in module scripts.nqp.command)</a>, <a href="scripts.nqp.html#scripts.nqp.command.initialise_game">[1]</a>
 </li>
       <li><a href="engine/internal/debug.html#scripts.engine.internal.debug.initialise_logging">initialise_logging() (in module scripts.engine.internal.debug)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.debug.initialise_logging">[1]</a>
@@ -1538,10 +1540,10 @@
 </li>
       <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.InputEventType">InputEventType (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.InputEventType">[1]</a>
 </li>
-      <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.InputIntent">InputIntent (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.InputIntent">[1]</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.InputIntent">InputIntent (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.InputIntent">[1]</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.ProjectileSpeed.INSTANT">INSTANT (ProjectileSpeed attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.EventType.INTERACTION">INTERACTION (EventType attribute)</a>
@@ -2996,6 +2998,8 @@
 </li>
       <li><a href="tests.engine.html#tests.engine.test_utility.test_is_not_close">test_is_not_close() (in module tests.engine.test_utility)</a>
 </li>
+      <li><a href="tests.engine.html#tests.engine.test_state.test_load_game">test_load_game() (in module tests.engine.test_state)</a>
+</li>
       <li><a href="tests.engine.html#tests.engine.test_effect.test_move_actor_effect">test_move_actor_effect() (in module tests.engine.test_effect)</a>
 </li>
       <li><a href="tests.engine.html#tests.engine.test_component.TestPosition.test_position_centers">test_position_centers() (TestPosition method)</a>
@@ -3010,7 +3014,9 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tests.engine.html#tests.engine.test_component.TestPosition.test_position_outmost_parameters">test_position_outmost_parameters (TestPosition attribute)</a>
 </li>
-      <li><a href="tests.engine.html#tests.engine.test_state.TestState.test_set_state">test_set_state() (TestState method)</a>
+      <li><a href="tests.engine.html#tests.engine.test_state.test_save_game">test_save_game() (in module tests.engine.test_state)</a>
+</li>
+      <li><a href="tests.engine.html#tests.engine.test_state.test_set_state">test_set_state() (in module tests.engine.test_state)</a>
 </li>
       <li><a href="tests.engine.html#tests.engine.test_component.TestPosition">TestPosition (class in tests.engine.test_component)</a>
 </li>
@@ -3056,8 +3062,6 @@
         <li><a href="tests.engine.html#module-tests.engine.test_utility">module</a>
 </li>
       </ul></li>
-      <li><a href="tests.engine.html#tests.engine.test_state.TestState">TestState (class in tests.engine.test_state)</a>
-</li>
       <li><a href="engine/internal/component.html#scripts.engine.internal.component.Thought">Thought (class in scripts.engine.internal.component)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Thought">[1]</a>
 </li>
       <li><a href="engine/world_objects/tile.html#scripts.engine.world_objects.tile.Tile">Tile (class in scripts.engine.world_objects.tile)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.tile.Tile">[1]</a>
