--- a/_modules/scripts/engine/internal/data.html
+++ b/_modules/scripts/engine/internal/data.html
@@ -268,6 +268,8 @@
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
     <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Type</span>
 
+    <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.game_map</span> <span class="kn">import</span> <span class="n">GameMap</span>
+
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span><span class="s2">"store"</span><span class="p">]</span>
 
 
@@ -286,8 +288,6 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">active_skill</span> <span class="o">=</span> <span class="kc">None</span>
 
         <span class="c1"># used in world</span>
-        <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.game_map</span> <span class="kn">import</span> <span class="n">GameMap</span>
-
         <span class="bp">self</span><span class="o">.</span><span class="n">current_game_map</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">GameMap</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
 
         <span class="c1"># used in chronicle</span>
@@ -299,8 +299,6 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">turn_holder</span><span class="p">:</span> <span class="n">EntityID</span> <span class="o">=</span> <span class="o">-</span><span class="mi">1</span>  <span class="c1"># current acting entity</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">previous_turn_holder</span><span class="p">:</span> <span class="n">EntityID</span> <span class="o">=</span> <span class="o">-</span><span class="mi">1</span>  <span class="c1"># current acting entity</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">message_log</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>
-
         <span class="c1">################### NOT SERIALISED #######################################</span>
 
         <span class="c1"># used to hold images called during runtime so only one copy ever exists.</span>
@@ -309,7 +307,9 @@
         <span class="c1"># used to hold actions registered with the engine.</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">skill_registry</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Type</span><span class="p">[</span><span class="n">Skill</span><span class="p">]]</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">affliction_registry</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Type</span><span class="p">[</span><span class="n">Affliction</span><span class="p">]]</span> <span class="o">=</span> <span class="p">{}</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">behaviour_registry</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Type</span><span class="p">[</span><span class="n">Behaviour</span><span class="p">]]</span> <span class="o">=</span> <span class="p">{}</span></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">behaviour_registry</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Type</span><span class="p">[</span><span class="n">Behaviour</span><span class="p">]]</span> <span class="o">=</span> <span class="p">{}</span>
+
+        <span class="bp">self</span><span class="o">.</span><span class="n">message_log</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span></div>
 
 <div class="viewcode-block" id="Store.serialise"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.data.Store.serialise">[docs]</a>    <span class="k">def</span> <span class="nf">serialise</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">]:</span>
         <span class="sd">"""</span>
@@ -340,13 +340,9 @@
         <span class="k">try</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">current_game_state</span> <span class="o">=</span> <span class="n">serialised</span><span class="p">[</span><span class="s2">"current_game_state"</span><span class="p">]</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">previous_game_state</span> <span class="o">=</span> <span class="n">serialised</span><span class="p">[</span><span class="s2">"previous_game_state"</span><span class="p">]</span>
-            <span class="k">if</span> <span class="n">serialised</span><span class="p">[</span><span class="s2">"current_game_map"</span><span class="p">]:</span>
-                <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.game_map</span> <span class="kn">import</span> <span class="n">GameMap</span>
+            <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.game_map</span> <span class="kn">import</span> <span class="n">GameMap</span>
 
-                <span class="n">game_map</span> <span class="o">=</span> <span class="n">GameMap</span><span class="o">.</span><span class="n">deserialise</span><span class="p">(</span><span class="n">serialised</span><span class="p">[</span><span class="s2">"current_game_map"</span><span class="p">])</span>
-            <span class="k">else</span><span class="p">:</span>
-                <span class="n">game_map</span> <span class="o">=</span> <span class="kc">None</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">current_game_map</span> <span class="o">=</span> <span class="n">game_map</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">current_game_map</span> <span class="o">=</span> <span class="n">GameMap</span><span class="o">.</span><span class="n">deserialise</span><span class="p">(</span><span class="n">serialised</span><span class="p">[</span><span class="s2">"current_game_map"</span><span class="p">])</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">turn_queue</span> <span class="o">=</span> <span class="n">serialised</span><span class="p">[</span><span class="s2">"turn_queue"</span><span class="p">]</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">round</span> <span class="o">=</span> <span class="n">serialised</span><span class="p">[</span><span class="s2">"round"</span><span class="p">]</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">time</span> <span class="o">=</span> <span class="n">serialised</span><span class="p">[</span><span class="s2">"time"</span><span class="p">]</span>
